# autonomous_anomaly_resposne_agent

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  agentic-ai-architecture-obs.html  agentic-ai-architecture.html  api.py  claude_walkthrough.md  cloudbuild.yaml  docker-compose.lite.yml  docker-compose.yml  main.py  orchestrator.py  package.json  pyproject.toml  test_log.txt  test_redis_checkpoint.py
.github/workflows/: main.yml
agents/: __init__.py
agents/action/: __init__.py  agent.py  pagerduty.py  tiers.py  workflows.py
agents/diagnosis/: __init__.py  crew.py  experts.py  graph.py  prompts.py
agents/diagnosis/sub_agents/: __init__.py
agents/feedback/: __init__.py  agent.py  finetuner.py  reward.py  reward_agent.py
agents/monitoring/: __init__.py  agent.py  prompts.py
agents/monitoring/tools/: __init__.py  monitoring_tools.py
automation/scripts/: continuous_improvement.py
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: ActiveIncidents.tsx  Dashboard.tsx  PolicyPerformance.tsx  StatusCards.tsx  TelemetryPulse.tsx
dashboard/lib/: api.ts
data/finetuning/: dataset_20260410_075942.jsonl
data_pipeline/connectors/: __init__.py  synthetic_producer.py
data_pipeline/flink_jobs/: __init__.py  anomaly_features.py
infra/argocd/: application.yaml
infra/docker/: Dockerfile
infra/helm_charts/anomaly-agent/: Chart.yaml  values.yaml
infra/helm_charts/anomaly-agent/templates/: deployment.yaml  hpa.yaml  rollout.yaml  service.yaml  servicemonitor.yaml
infra/k8s/: auth.yaml  deployment-prod.yaml  deployment.yaml  secret-provider.yaml  service-prod.yaml
infra/terraform/: main.tf  terraform.tfvars  tfplan  tfplan_v2  tfplan_v8
knowledge_base/: __init__.py
knowledge_base/ingestion/: pipeline.py
knowledge_base/migrations/: 001_initial.sql  002_supabase_cloud.sql
knowledge_base/retrieval/: search.py
observability/grafana/dashboards/: agent_ops_dashboard.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
observability/otel/: otel-collector-config.yaml
observability/prometheus/: prometheus.yml
observability/tempo/: tempo.yaml
scripts/: run_chaos_experiments.py  seed_knowledge_base.py  test_cohere.py  test_pubsub.py  test_slack.py  trigger_finetuning.py  verify_rag.py  verify_rl_learning.py  verify_specialized_agents.py
shared/: __init__.py  config.py  llm.py  pii.py  pubsub.py  schemas.py  utils.py
tests/: conftest.py
tests/evals/: golden_dataset.json  test_evals.py
tests/integration/: test_contract.py  test_integration.py
tests/load/: locustfile.py
tests/unit/: test_budget_enforcement.py  test_data_pipeline.py  test_pii.py  test_redis_locks.py  test_reward_and_tiers.py  test_schemas.py  test_tools.py
ui/: app.js  index.html  style.css
