[tool.poetry]
name = "payment-reliability-agents"
version = "1.0.0"
description = "24/7 Service Reliability & Anomaly-Response Multi-Agent System for Payment Transaction Monitoring"
authors = ["Ankit"]
readme = "README.md"
packages = [
    { include = "agents" },
    { include = "data_pipeline" },
    { include = "knowledge_base" },
    { include = "shared" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# ─── Agent Frameworks ─────────────────────────────────────────
langchain = ">=0.3.0,<1.0.0"
langchain-openai = ">=0.2.0"
langchain-google-genai = ">=2.0.0"
langchain-anthropic = ">=0.2.0"
langchain-community = ">=0.3.0"
langgraph = ">=0.2.0"
langgraph-checkpoint = "==3.0.1"
langgraph-checkpoint-redis = "==0.1.0"
crewai = ">=0.80.0"

# ─── RAG & Embeddings ────────────────────────────────────────
langchain-postgres = ">=0.0.9"
sentence-transformers = ">=3.0.0"

# ─── Data & Streaming ────────────────────────────────────────
confluent-kafka = ">=2.3.0"
redis = ">=5.0.0"
asyncpg = ">=0.29.0"
sqlalchemy = ">=2.0.0"
psycopg2-binary = ">=2.9.9"
google-cloud-pubsub = ">=2.20.0"
google-cloud-secret-manager = ">=2.19.0"
google-cloud-storage = ">=2.14.0"

# ─── ML & Anomaly Detection ──────────────────────────────────
scikit-learn = ">=1.4.0"
numpy = ">=1.26.0"
pandas = ">=2.2.0"
vowpalwabbit = ">=9.11.0"

# ─── Observability ────────────────────────────────────────────
opentelemetry-api = ">=1.24.0"
opentelemetry-sdk = ">=1.24.0"
opentelemetry-exporter-otlp = ">=1.24.0"
opentelemetry-instrumentation-fastapi = ">=0.45b0"
langsmith = ">=0.1.0"
langfuse = "^2.0.0"

# ─── API & Web ────────────────────────────────────────────────
fastapi = ">=0.111.0"
uvicorn = {version = ">=0.29.0", extras = ["standard"]}
httpx = ">=0.27.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.0"

# ─── Automation & Notifications ───────────────────────────────
slack-sdk = ">=3.27.0"

# ─── Utilities ────────────────────────────────────────────────
python-dotenv = ">=1.0.0"
structlog = ">=24.1.0"
tenacity = ">=8.3.0"
orjson = ">=3.10.0"
rich = ">=13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-mock = ">=3.14.0"
pytest-cov = ">=5.0.0"
hypothesis = ">=6.100.0"
respx = ">=0.21.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pre-commit = ">=3.7.0"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "SIM", "TCH"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
